--- a/menu.html
+++ b/menu.html
@@ -31,8 +31,11 @@
             <article>
                 <h2 id="cartTitle">Your Cart</h2>
                 <div id="cartContainer">
-                    <div id="cart0">
+                    <div id="cartEmpty">
                         <p>Nothing currently in your cart.</p>
+                    </div>
+                    <div id="cart0">
+                    
                     </div>
                     <div id="cart1">
                             
